Bug 80959 - Any extension installed in share\extensions won't work if it's folder name contains spaces
Summary: Any extension installed in share\extensions won't work if it's folder name co...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Extensions (show other bugs)
Version:
(earliest affected)
4.0.0.3 release
Hardware: All All
: medium minor
Assignee: Mike Kaganski
URL:
Whiteboard: target:26.2.0 target:25.8.4
Keywords:
Depends on:
Blocks:
 
Reported: 2014-07-05 22:04 UTC by Alex
Modified: 2025-11-27 15:36 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Comparisson screenshot (260.76 KB, image/png)
2014-07-05 22:04 UTC, Alex
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Alex 2014-07-05 22:04:57 UTC
Created attachment 102310 [details]
Comparisson screenshot

If you install extensions through unpacking them to ..\share\extensions\.. (to make them available to all users) they won't work if an extension folder name contains spaces. It will load toolbars, menu entries, etc., but won't load it's code (represented in *.xba files) and won't work at all. Nothing happens when you press the button of an extension or it's menu entry and you can't find it even when customizing menu or toolbar (usually extensions are represented in "my macros" when doing that). 
Also, version 4.3.x.x won't start at all giving you a failure error.

But if you rename the folder in a "proper way" (and delete user data so extension will be re-initialized) it will work perfectly.

Version 4.2.4.2 did not have this bug.
Comment 1 Buovjaga 2014-11-18 13:09:12 UTC
Reproduced. Unpacked this http://extensions.libreoffice.org/extension-center/copy-only-visible-cells
to C:\Program Files (x86)\LibreOfficeDev 4\share\extensions\copy visi cells\
When I launch Calc, LibO crashes with Fatal error, bad allocation.
After removing the extension folder, had to delete user profile to get back to normal.

In Ubuntu, LibO refused to run and I got this in the debug output when the folder was present:
warn:legacy.osl:4017:5:desktop/source/deployment/dp_persmap.cxx:138: OSL_ASSERT: ('A' <= c) && (c <= 'F')
warn:legacy.osl:4017:5:desktop/source/deployment/dp_persmap.cxx:138: OSL_ASSERT: ('A' <= c) && (c <= 'F')
warn:legacy.osl:4017:5:desktop/source/deployment/manager/dp_activepackages.cxx:82: OSL_ASSERT: i1 >= 0
terminate called after throwing an instance of 'com::sun::star::deployment::DeploymentException'

Win 7 64-bit Version: 4.4.0.0.alpha2+
Build ID: b021b5983c62e266b82d9f0c5c6d8d8900553827
TinderBox: Win-x86@39, Branch:master, Time: 2014-11-12_01:10:08

Ubuntu 14.10 64-bit Version: 4.4.0.0.alpha2+
Build ID: 3cf226622a3d8c09d655034dbcc81695f1662b87
TinderBox: Linux-rpm_deb-x86_64@46-TDF-dbg, Branch:master, Time: 2014-11-15_23:24:22
Comment 2 QA Administrators 2015-12-20 16:21:46 UTC Comment hidden (obsolete)
Comment 3 QA Administrators 2017-01-03 19:51:22 UTC Comment hidden (obsolete)
Comment 4 Rob Snelders 2019-01-06 10:23:37 UTC Comment hidden (obsolete)
Comment 5 RandyMathison 2020-05-11 09:45:14 UTC Comment hidden (spam)
Comment 6 Amul Franchise 2020-11-23 05:37:33 UTC Comment hidden (spam)
Comment 7 Mike Kaganski 2025-11-10 11:12:45 UTC
(In reply to Rob Snelders from comment #4)
> Is duplicate of 114708

This is highly unlikely (or in fact, completely impossible), that this bug (reported for non-Python extensions) is a dupe of bug 114708 (or bug 150982). It may be fixed independently, though.
Comment 8 Mike Kaganski 2025-11-10 13:01:20 UTC
Separate, and still reproducible.
Comment 9 Mike Kaganski 2025-11-16 08:47:12 UTC
https://gerrit.libreoffice.org/c/core/+/194066
Comment 10 Commit Notification 2025-11-16 10:34:59 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/5028a5f7564b8a2d8df626feb1a6a85ee8a65db3

tdf#80959: fix percent character escaping in dp_misc::(en|de)codeString

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Commit Notification 2025-11-27 15:36:48 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/fd7facf439be9e0f0e464205343c13cb5a68268f

tdf#80959: fix percent character escaping in dp_misc::(en|de)codeString

It will be available in 25.8.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.